ESP32_Gateway_Firmware/build/log/idf_py_stdout_output_4116
[1/11] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Espressif\NCKH2026_RailRobot\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.2.6/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Espressif/NCKH2026_RailRobot/build/bootloader/bootloader.bin"
Bootloader binary size 0x5390 bytes. 0x2c70 bytes (35%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/uart_app/CMakeFiles/__idf_uart_app.dir/uart_app.c.obj
FAILED: esp-idf/uart_app/CMakeFiles/__idf_uart_app.dir/uart_app.c.obj 
ccache C:\Espressif\tools\riscv32-esp-elf\esp-13.2.0_20250707\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.6-dirty\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Espressif/NCKH2026_RailRobot/build/config -IC:/Espressif/NCKH2026_RailRobot/my_components/uart_app/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/freertos/config/riscv/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_hw_support/include/soc/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/soc/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/soc/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/hal/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_rom/include/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_rom/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_system/port/include/riscv -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/riscv/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/lwip/port/esp32xx/include/sys -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/analog_comparator/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/dac/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/gpio/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/gptimer/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/i2c/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/i2s/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/ledc/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/mcpwm/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/parlio/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/pcnt/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/rmt/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/sdio_slave/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/sigma_delta/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/spi/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/temperature_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/touch_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/twai/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/uart/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/driver/usb_serial_jtag/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_ringbuf/include -IC:/Espressif/NCKH2026_RailRobot/my_components/mqtt_app/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/mqtt/esp-mqtt/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/tcp_transport/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp-tls -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp-tls/esp-tls-crypto -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/mbedtls/port/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/mbedtls/mbedtls/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/mbedtls/mbedtls/library -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/mbedtls/esp_crt_bundle/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/mbedtls/mbedtls/3rdparty/everest/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/mbedtls/mbedtls/3rdparty/p256-m -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_timer/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_netif/include -IC:/Espressif/NCKH2026_RailRobot/my_components/wifi_manager/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_wifi/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_wifi/wifi_apps/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_phy/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_phy/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/spi_flash/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_partition/include -IC:/Espressif/NCKH2026_RailRobot/my_components/led_app/include -IC:/Espressif/frameworks/esp-idf-v5.2.6/components/esp_http_client/include -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Espressif/NCKH2026_RailRobot=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.2.6=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/uart_app/CMakeFiles/__idf_uart_app.dir/uart_app.c.obj -MF esp-idf\uart_app\CMakeFiles\__idf_uart_app.dir\uart_app.c.obj.d -o esp-idf/uart_app/CMakeFiles/__idf_uart_app.dir/uart_app.c.obj -c C:/Espressif/NCKH2026_RailRobot/my_components/uart_app/uart_app.c
C:/Espressif/NCKH2026_RailRobot/my_components/uart_app/uart_app.c: In function 'uart_event_task':
C:/Espressif/NCKH2026_RailRobot/my_components/uart_app/uart_app.c:73:33: error: 'has_pending_command' undeclared (first use in this function)
   73 |                             if (has_pending_command == true)
      |                                 ^~~~~~~~~~~~~~~~~~~
C:/Espressif/NCKH2026_RailRobot/my_components/uart_app/uart_app.c:73:33: note: each undeclared identifier is reported only once for each function it appears in
C:/Espressif/NCKH2026_RailRobot/my_components/uart_app/uart_app.c:76:57: error: 'pending_speed_L' undeclared (first use in this function)
   76 |                                 UART_Send_Robot_Command(pending_speed_L, pending_speed_R);
      |                                                         ^~~~~~~~~~~~~~~
C:/Espressif/NCKH2026_RailRobot/my_components/uart_app/uart_app.c:76:74: error: 'pending_speed_R' undeclared (first use in this function)
   76 |                                 UART_Send_Robot_Command(pending_speed_L, pending_speed_R);
      |                                                                          ^~~~~~~~~~~~~~~
[5/11] Building C object esp-idf/mqtt_app/CMakeFiles/__idf_mqtt_app.dir/mqtt_app.c.obj
ninja: build stopped: subcommand failed.
